simple/test/features/errors/macros/e1403_keyword_in_macro.spl
# E1403: Keyword in Macro

Feature: E1403 - Reserved Keyword in Macro
  As a Simple compiler
  I want to detect reserved keywords used as macro names or parameters
  So that macros don't conflict with language keywords

  Background:
    Given I have the Simple compiler
    And the compiler supports macros

  Scenario: Macro name is reserved keyword
    When I compile:
      '''
      macro fn():  # Error: 'fn' is a reserved keyword
        print("test")
      '''
    Then I should see error E1403 at line 1
    And the error message should be "reserved keyword `{keyword}` cannot be used in macro"
    And the label should indicate "reserved keyword"
    And the help should suggest "use a different name that is not a reserved keyword"

  Scenario: Macro parameter is reserved keyword
    When I compile:
      '''
      macro my_macro(if):  # Error: 'if' is reserved
        print(if)
      '''
    Then I should see error E1403 at line 1
    And the error should point to the reserved keyword parameter

  Scenario: Macro uses 'self' as parameter
    When I compile:
      '''
      macro process(self):  # Error: 'self' is reserved
        self.do_something()
      '''
    Then I should see error E1403

  Scenario: Macro uses 'match' as name
    When I compile:
      '''
      macro match():  # Error: 'match' is reserved
        # body
      '''
    Then I should see error E1403

  Scenario: Valid macro with non-keyword name
    When I compile:
      '''
      macro my_debug(expr):
        print("Debug: {expr}")
      '''
    Then compilation should succeed

  Scenario: Valid macro with underscore prefix
    When I compile:
      '''
      macro _internal_helper(value):
        # implementation
      '''
    Then compilation should succeed

  Scenario: Macro name conflicts with standard library (warning)
    When I compile:
      '''
      macro print(msg):  # May warn about shadowing stdlib
        # custom implementation
      '''
    Then compilation should succeed with possible warning

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      macro fn():
        print("test")
      '''
    Then I should see error E1403
    And the error message should contain "매크로에 예약 키워드"
